fixing code based on SonarLint